JumpScript/tests/baselines/reference/undefinedTypeArgument1.errors.txt
tests/cases/compiler/undefinedTypeArgument1.jump(1,22): error TS2304: Cannot find name 'WAWA'.


==== tests/cases/compiler/undefinedTypeArgument1.jump (1 errors) ====
    var cats = new Array<WAWA>();
                         ~~~~
!!! error TS2304: Cannot find name 'WAWA'.